Agregado comentarios, documentación y swagger
